Fixed links color on hover for better visibillity

--- a/Project/Styles/06-Components/_c-top-navigation.scss
+++ b/Project/Styles/06-Components/_c-top-navigation.scss
@@ -34,6 +34,10 @@
         .top-navigation__right-section {
             .grey-color-text {
                 color: $grey-500;
+
+                &:hover {
+                    color: $primary-black;
+                }
             }
     
             .white-color-text {
